# React-Automation-Studio

./: .dockerignore  .gitignore  LICENSE  README.md  _config.yml  dev.sh  docker-compose-administator.yml  docker-compose-dev-styleguide-dev.yml  docker-compose-dev.yml  docker-compose-sandboxio.yml  docker-compose.yml  dockerCommands.txt  example.env  package.json  prod.sh  styleguide.config.js  version
.devcontainer/: devcontainer.json
.github/workflows/: black.yml
ReactApp/: index.html  package.json  pnpm-lock.yaml  styleguide.config.js  vite.config.js
ReactApp/.storybook/: ImportPath.tsx  Wrapper.jsx  main.js  preview.tsx
ReactApp/public/: Harp.gltf  index.html  manifest.json
ReactApp/src/: App.js  App.jsx  AppRoutes.jsx  LogIn.js  Main.js  MainPublic.js  Routes.js  Routes.jsx  Themes.js  index.js  main.jsx  routes.js
ReactApp/src/CSS/: ReactVisLightCompoment.js
adminDbInit/: .gitignore  initDB.py  requirements.txt
adminDbInit/config/: pvAccess.json  users.json
administrator/scripts/: admin-add-user  admin-change-user-password  admin-check-user-password  admin-del-user  admin-list-users  administrator.py
alarmHandlerDbInit/: generateJSON.py  initDB.py  main.py
alarmHandlerDbInit/initDBData/: config.json  pvList.json  userList.json  users.json
alarmHandlerServer/: alarmHandler.env
alarmHandlerServer/initDBData/: pvList.json
docker/adminDbInit/: Dockerfile
docker/administrator/: Dockerfile
docker/alarmHandlerDbInit/: Dockerfile
docker/alarmHandlerServer/: Dockerfile
docker/demoioc/: Dockerfile
docker/epicsBase/: Dockerfile
docker/frontend/: Dockerfile
docker/frontendserver/: Dockerfile
docker/frontendserverDev/: Dockerfile
docker/gateway/: Dockerfile
docker/loadSaveDbInit/: Dockerfile
docker/mongoSetup/: Dockerfile
docker/node_cache/: Dockerfile
docker/pvserver/: Dockerfile
docker/signalcli/: Dockerfile
docker/storybook/: Dockerfile
docker/storybookServerDev/: Dockerfile
docker/styleguide/: Dockerfile
docker/styleguideServerDev/: Dockerfile
docker/styleguideserver/: Dockerfile
docs/: migrate-from-V4-to-V5.md  migrate-from-V5-to-V6.md  migrate-from-V6-to-V7.md
epics/gateway/: example.GATEWAY.access  example.GATEWAY.command  example.GATEWAY.pvlist
frontendServer/: frontendServer.js  package-lock.json  package.json
loadSaveDbInit/: initDB.py
mongoSetup/: main.py  mongosetup.env  replSetup.py
nginx/: nginx.conf  nginx.dev.conf  nginx.httpredirect.conf  nginx.production.conf  nginx.styleguide.dev.conf  setupNginx.dev.sh  setupNginx.sh  setupNginx.styleguide.dev.sh
public/: index.html  manifest.json
pvServer/: README.md  config.py  core.py  log.py  pvServer.py  pyproject.toml  requirements.txt  server.py
pvServer/test/: auth_structs.py  pvServer_test_case.py  test_authenticate.py
pvServer/userAuthentication/: USERS.example  authenticate.py  defaultAccess.json  pvList.json
signalcli/: pyproject.toml
signalcli/signal_cli_rest_api/: main.py
signalcli/signal_cli_rest_api/app/: config.py  main.py  utils.py
signalcli/signal_cli_rest_api/app/api/api_v1/: api.py
signalcli/signal_cli_rest_api/app/api/api_v1/endpoints/: block.py  groups.py  messages.py  profile.py  register.py
signalcli/signal_cli_rest_api/app/schemas/: __init__.py  block.py  group.py  message.py  profile.py  register.py
src/: App.js  LogIn.js  Main.js  RfOverlay.js  index.js  limitedRoutes.js  routes.js
src/CSS/: ReactVisDarkCompoment.js
src/api/: ThreeScene.js
src/docs/: documentation.md  introduction.md  layout.md
src/styleguide/: Wrapper.js
styleguideServer/: package-lock.json  package.json  styleguideServer.js
users/: example.pvAccess.json  example.users.json  pvAccess.json  users.json
(+998 files in other folders)
