[tool.poetry]
authors = ["React Automation Studio Team https://github.com/React-Automation-Studio/React-Automation-Studio/discussions"]
description = "RAS Python backend. It mainly manages connections with PVs, through a websocket connection, authentication, authorization, plus other optional functionalities."
license = "MIT"
name = "pvserver"
readme = "README.md"
repository = "https://github.com/React-Automation-Studio/React-Automation-Studio"
version = "5.2.1"

[tool.poetry.dependencies]
Flask = "3.0.3"
Flask-Cors = "4.0.1"
Flask-SocketIO = "5.3.6"
PyJWT = "2.8.0"
Werkzeug = "3.0.3"
bcrypt = "4.1.3"
gevent = "24.2.1"
gevent-websocket = "0.10.1"
google-api-python-client = "2.137.0"
pyepics = "3.5.2"
pymongo = "4.6.3"
python = "3.12.4"
python-dotenv = "1.0.1"
python-ldap = "3.4.4"
numpy = "2.0.0"

[tool.poetry.dev-dependencies]
black = "24.4.2"
pytest = "8.2.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core=1.9.0"]
