[tool.poetry]
authors = ["React Automation Studio Team https://github.com/React-Automation-Studio/React-Automation-Studio/discussions"]
description = "RAS Python backend. It mainly manages connections with PVs, through a websocket connection, authentication, authorization, plus other optional functionalities."
license = "MIT"
name = "pvserver"
readme = "README.md"
repository = "https://github.com/React-Automation-Studio/React-Automation-Studio"
version = "6.0.0"

[tool.poetry.dependencies]
Flask = "3.1.0"
Flask-Cors = "5.0.0"
Flask-SocketIO = "5.4.1"
PyJWT = "2.10.0"
Werkzeug = "3.1.3"
bcrypt = "4.2.0"
gevent = "24.11.1"
gevent-websocket = "0.10.1"
google-api-python-client = "2.153.0"
pyepics = "3.5.7"
pymongo = "4.10.1"
python = "3.12.7"
python-dotenv = "1.0.1"
python-ldap = "3.4.4"
numpy = "2.1.3"

[tool.poetry.dev-dependencies]
black = "24.10.0"
pytest = "8.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core=1.9.1"]
