[tool.poetry]
name = "signal-cli-rest-api"
version = "0.1.97"
description = ""
readme = "README.md"
repository = "https://github.com/SebastianLuebke/signal-cli-rest-api"
authors = ["Sebastian Noel Lübke <sebastian@luebke.io>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
python-jose = "^3.1.0"
pyqrcode = "^1.2.1"
pypng = "^0.0.20"
aiofiles = "^0.6.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pylint = "^2.5.3"
autoflake = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

